REGRESSION(285812@main): [Win] ASSERTION FAILED: !m_flushingLayers in WebCore::RenderLayerCompositor::scheduleRenderingUpdate() https://bugs.webkit.org/show_bug.cgi?id=282278

Reviewed by Simon Fraser.

After <https://commits.webkit.org/285812@main>, Windows port Debug
builds were failing an assertion because layer flushing was requested
while layers were flushing. GraphicsLayerWC::setBackgroundColor is
called to the content root layer while a descendant layer is painting.

A member variable m_isFlushing of GraphicsLayerWC class is the flag to
prevent requesting layer flush during layer flushing. m_isFlushing
should be true even while flushing descendant layers.

* Source/WebKit/WebProcess/WebPage/wc/GraphicsLayerWC.cpp:
(WebKit::GraphicsLayerWC::flushCompositingStateForThisLayerOnly):
(WebKit::GraphicsLayerWC::recursiveCommitChanges):

Canonical link: https://commits.webkit.org/285867@main